--- a/style.css
+++ b/style.css
@@ -7,19 +7,30 @@ body{
     }
     div{
         background-color:lime;
-        position: absolute;
-        border:	thick rgb(0, 79, 128) ridge;
-        margin-block: auto;
+        left: auto;
     }
-    p{	background-color:aqua;
-        position:relative;
+    h1{	border: 10px;
+        background-color:aqua;
+        position: relative;
         font-family:"Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
         font-size:xx-large;
+        text-align: center;
     }
     
     
-    .auto-style1 {
-        margin-right:auto;
-        margin-left:auto;
-    }
+    .auto-style1 { 
+        border: thick rgb(0, 79, 128) ridge;
+        margin: 0;
     
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%)
+    }
+    .video
+    {
+        display: block;
+        align-items: centre;
+       text-align: left;
+    }
