--- a/style.css
+++ b/style.css
@@ -1,16 +1,15 @@
 body{
-    background-color:lime;
+    background-image: linear-gradient( 109.6deg,  rgba(61,245,167,1) 11.2%, rgba(9,111,224,1) 91.1% );
         }
     
     h3 {
         border:medium 
     }
     div{
-        background-color:lime;
         left: auto;
     }
     h1{	border: 10px;
-        background-color:aqua;
+      
         position: relative;
         font-family:"Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
         font-size:xx-large;
@@ -39,3 +38,4 @@ body{
         color: rgb(255, 0, 179); 
         font-weight: bold;
     }
+    
